* Task/Bug Id: Changes made for right align labels and alternate coloring in Specimen Page (Ankush) * Code Reviewed By: Nitesh M * Technical Details:  <Technical details for the changes made if any> * Unit tested:   <Names of the test cases> * Developer Notes: <Free form comments, typically will involve names of the methods changed etc> * Current Build++ Counts for this file : <B++ counts before the file is checked-in> * PMD - X     Checkstyle - X     Findbugs - X     CPD â€“ X
SVN-Revision: 29944

--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -1032,8 +1032,11 @@ input.actionButton{ /* optional style for form and action buttons */
 }
 
 .align_right_style{
-		padding-right: 17px;	
+	padding-right: 17px;
+	font-weight:bold;
+	text-align:right;
 }
+
 
 .align_right_style1{
 		padding-right: 10px;	
